[gd_scene load_steps=16 format=3 uid="uid://fm8xt522l3yh"]

[ext_resource type="Script" uid="uid://c5gphwsguli3v" path="res://Enemies/Slimes/corrupt_slime.gd" id="1_3p2g1"]
[ext_resource type="Texture2D" uid="uid://l057j1nhk4r7" path="res://Assets/Enemies/Custom Enemy/CorruptSlime/Idle/Corrupt_Slime2_idle.png" id="1_gidip"]
[ext_resource type="PackedScene" path="res://Components/health_component.tscn" id="3_health"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3p2g1"]
atlas = ExtResource("1_gidip")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_calg4"]
atlas = ExtResource("1_gidip")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3k4ml"]
atlas = ExtResource("1_gidip")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwyyl"]
atlas = ExtResource("1_gidip")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6vft"]
atlas = ExtResource("1_gidip")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c41iw"]
atlas = ExtResource("1_gidip")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha6hm"]
atlas = ExtResource("1_gidip")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sxjl"]
atlas = ExtResource("1_gidip")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1atqt"]
atlas = ExtResource("1_gidip")
region = Rect2(128, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_4sxjl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3p2g1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_calg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3k4ml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwyyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6vft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c41iw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha6hm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sxjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1atqt")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_calg4"]
size = Vector2(6, 6)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_body"]
radius = 5.0
height = 10.0

[node name="CorruptSlime" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 4
script = ExtResource("1_3p2g1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4sxjl")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_calg4")

[node name="HealthComponent" parent="." instance=ExtResource("3_health")]
max_health = 3
invincibility_duration = 0.2

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_body")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_body")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
